{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 546,
  "lineage": "544ee5b4-e00b-b423-cbf4-b5fee2c7612d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "thistgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:transit-gateway/tgw-024e2b4f6d1c794ff",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "tokyo Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-024e2b4f6d1c794ff",
            "multicast_support": "disable",
            "owner_id": "518897854809",
            "tags": {
              "Name": "tokyo-tgw"
            },
            "tags_all": {
              "Name": "tokyo-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "thistgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:transit-gateway-route-table/tgw-rtb-0925b31a0e8699ce6",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0925b31a0e8699ce6",
            "tags": {
              "Name": "tokyo-tgw-rt"
            },
            "tags_all": {
              "Name": "tokyo-tgw-rt"
            },
            "transit_gateway_id": "tgw-024e2b4f6d1c794ff"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "thistgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0925b31a0e8699ce6_tgw-attach-050473fe3c63b637e",
            "resource_id": "vpc-0cca97fbdbc190704",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-050473fe3c63b637e",
            "transit_gateway_route_table_id": "tgw-rtb-0925b31a0e8699ce6"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "aws_ec2_transit_gateway_route_table.thistgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.region_vpc_tgw_attach",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "thistgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0925b31a0e8699ce6_tgw-attach-050473fe3c63b637e",
            "resource_id": "vpc-0cca97fbdbc190704",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-050473fe3c63b637e",
            "transit_gateway_route_table_id": "tgw-rtb-0925b31a0e8699ce6"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "aws_ec2_transit_gateway_route_table.thistgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.region_vpc_tgw_attach",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-050473fe3c63b637e",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0c4b47758413216fe",
              "subnet-0d68ec20231e0110f"
            ],
            "tags": {
              "Name": "tokyo-vpc-tgw-attach"
            },
            "tags_all": {
              "Name": "tokyo-vpc-tgw-attach"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-024e2b4f6d1c794ff",
            "vpc_id": "vpc-0cca97fbdbc190704",
            "vpc_owner_id": "518897854809"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_a_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d7a855136558980387087073",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d7a855136558980",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-024e2b4f6d1c794ff",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_c_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c673bcdbe5c35bab387087073",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c673bcdbe5c35bab",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-024e2b4f6d1c794ff",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_a_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb208bdf1589787a387087073",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb208bdf1589787a",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-024e2b4f6d1c794ff",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_c_region_vpc_tgw_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.4.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0451ec4cb32fcdcb2387087073",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451ec4cb32fcdcb2",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-024e2b4f6d1c794ff",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.thistgw",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:loadbalancer/app/region01-alb/18e615b512a79852",
            "arn_suffix": "app/region01-alb/18e615b512a79852",
            "desync_mitigation_mode": "defensive",
            "dns_name": "region01-alb-1563133163.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:loadbalancer/app/region01-alb/18e615b512a79852",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "region01-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08c97daef15fa03f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c4b47758413216fe"
              },
              {
                "subnet_id": "subnet-0d68ec20231e0110f"
              }
            ],
            "subnets": [
              "subnet-0c4b47758413216fe",
              "subnet-0d68ec20231e0110f"
            ],
            "tags": {
              "Managed_by": "Terraform",
              "team": "4jo"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "team": "4jo"
            },
            "vpc_id": "vpc-0cca97fbdbc190704",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_acm_certificate.acm_cert",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:listener/app/region01-alb/18e615b512a79852/2dcad64d093d9c13",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:518897854809:certificate/f17a263a-0197-4183-a46b-9dc0ac0eed3f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:targetgroup/region01-target-group/f8c171d33c4e5645",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:listener/app/region01-alb/18e615b512a79852/2dcad64d093d9c13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:loadbalancer/app/region01-alb/18e615b512a79852",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.acm_cert",
            "module.load_balancer.aws_lb.web",
            "module.load_balancer.aws_lb_target_group.web",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:listener/app/region01-alb/18e615b512a79852/524c9677ac7e93dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:listener/app/region01-alb/18e615b512a79852/524c9677ac7e93dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:loadbalancer/app/region01-alb/18e615b512a79852",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.acm_cert",
            "module.load_balancer.aws_lb.web",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:targetgroup/region01-target-group/f8c171d33c4e5645",
            "arn_suffix": "targetgroup/region01-target-group/f8c171d33c4e5645",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:518897854809:targetgroup/region01-target-group/f8c171d33c4e5645",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "region01-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "aws_acm_certificate.acm_cert",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route",
      "name": "gwlb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb208bdf1589787a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb208bdf1589787a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0ea267d3866ed1ff7",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route",
      "name": "gwlb_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0451ec4cb32fcdcb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451ec4cb32fcdcb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-091a46c71e919b595",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088d2e7f1afb6cd87102469380",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088d2e7f1afb6cd87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0ea267d3866ed1ff7",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.network_firewall.aws_route_table.igw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.4.22.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088d2e7f1afb6cd87365428673",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088d2e7f1afb6cd87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-091a46c71e919b595",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_firewall.aws_networkfirewall_firewall.fw",
            "module.network_firewall.aws_networkfirewall_firewall_policy.fwpolicy",
            "module.network_firewall.aws_networkfirewall_rule_group.block_domains",
            "module.network_firewall.aws_networkfirewall_rule_group.drop_tcp_test",
            "module.network_firewall.aws_route_table.igw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:route-table/rtb-088d2e7f1afb6cd87",
            "id": "rtb-088d2e7f1afb6cd87",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-igw-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-igw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.network_firewall",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0eeb7a0248accc076",
            "id": "rtbassoc-08c2bdbb3584ec40e",
            "route_table_id": "rtb-088d2e7f1afb6cd87"
          },
          "dependencies": [
            "module.network_firewall.aws_route_table.igw",
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route.internet_gateway_fw",
            "module.vpc.aws_route.nat_gateway_a",
            "module.vpc.aws_route.nat_gateway_c",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_c",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_c",
            "module.vpc.aws_route_table_association.public_fw",
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_security_group_rule.admin_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress",
            "module.vpc.aws_security_group_rule.alb_access_ingress_https",
            "module.vpc.aws_security_group_rule.alb_access_ingress_icmp",
            "module.vpc.aws_security_group_rule.http_access_ingress",
            "module.vpc.aws_security_group_rule.https_access_ingress",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_security_group_ingress_rule.icmp_access_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09eee3f0a2b59b9e0",
            "domain": "vpc",
            "id": "eipalloc-09eee3f0a2b59b9e0",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-64-95-69.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.64.95.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a82cbfb13686e10",
            "domain": "vpc",
            "id": "eipalloc-00a82cbfb13686e10",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-65-90-249.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.65.90.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:internet-gateway/igw-0eeb7a0248accc076",
            "id": "igw-0eeb7a0248accc076",
            "owner_id": "518897854809",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-igw"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09eee3f0a2b59b9e0",
            "association_id": "eipassoc-0a22590e394ad9e1b",
            "connectivity_type": "public",
            "id": "nat-0ebbd7d19096e3aaf",
            "network_interface_id": "eni-06648bb56d2325f48",
            "private_ip": "10.4.2.34",
            "public_ip": "54.64.95.69",
            "subnet_id": "subnet-0c4b47758413216fe",
            "tags": {
              "Name": "region01-nat-gw-1a"
            },
            "tags_all": {
              "Name": "region01-nat-gw-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a82cbfb13686e10",
            "association_id": "eipassoc-09cc10e7f64f4652f",
            "connectivity_type": "public",
            "id": "nat-01a04b13caf3fa1f3",
            "network_interface_id": "eni-06abb67f0b85f8982",
            "private_ip": "10.4.22.238",
            "public_ip": "54.65.90.249",
            "subnet_id": "subnet-0d68ec20231e0110f",
            "tags": {
              "Name": "region01-nat-gw-1c"
            },
            "tags_all": {
              "Name": "region01-nat-gw-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eeb7a0248accc076",
            "id": "r-rtb-003a43b0a8cf4ac5b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003a43b0a8cf4ac5b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d7a8551365589801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ebbd7d19096e3aaf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d7a855136558980",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c673bcdbe5c35bab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01a04b13caf3fa1f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c673bcdbe5c35bab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:route-table/rtb-07d7a855136558980",
            "id": "rtb-07d7a855136558980",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-private-a-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-private-a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:route-table/rtb-0c673bcdbe5c35bab",
            "id": "rtb-0c673bcdbe5c35bab",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-private-c-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-private-c-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:route-table/rtb-0bb208bdf1589787a",
            "id": "rtb-0bb208bdf1589787a",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-a-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:route-table/rtb-0451ec4cb32fcdcb2",
            "id": "rtb-0451ec4cb32fcdcb2",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-c-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-c-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:route-table/rtb-003a43b0a8cf4ac5b",
            "id": "rtb-003a43b0a8cf4ac5b",
            "owner_id": "518897854809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-fw-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-fw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023fa60c78d3aff1c",
            "route_table_id": "rtb-07d7a855136558980",
            "subnet_id": "subnet-0b56fb9d51fe29f11"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d1c699c8ac0caf",
            "route_table_id": "rtb-0c673bcdbe5c35bab",
            "subnet_id": "subnet-0506ea4fd5389a162"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_c",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c58095b592981b8",
            "route_table_id": "rtb-0bb208bdf1589787a",
            "subnet_id": "subnet-0c4b47758413216fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_a",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018f2b911106a7438",
            "route_table_id": "rtb-0451ec4cb32fcdcb2",
            "subnet_id": "subnet-0d68ec20231e0110f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_c",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39fa0fbec48c4aa",
            "route_table_id": "rtb-003a43b0a8cf4ac5b",
            "subnet_id": "subnet-0f5caed4d707fae0b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0f11c1d4d4a65df",
            "route_table_id": "rtb-003a43b0a8cf4ac5b",
            "subnet_id": "subnet-0a35a8bba3e46665f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_fw",
            "module.vpc.aws_subnet.public_fw",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:security-group/sg-0cfda7a5195c59fde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfda7a5195c59fde",
            "ingress": [],
            "name": "region01-admin-sg",
            "name_prefix": "",
            "owner_id": "518897854809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-admin-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:security-group/sg-08c97daef15fa03f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c97daef15fa03f1",
            "ingress": [],
            "name": "region01-alb-sg",
            "name_prefix": "",
            "owner_id": "518897854809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-alb-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:security-group/sg-0533822d5f110289f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0533822d5f110289f",
            "ingress": [],
            "name": "region01-web-sg",
            "name_prefix": "",
            "owner_id": "518897854809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-web-sg"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "116.127.84.104/32",
              "218.50.140.95/32",
              "10.4.0.0/16"
            ],
            "description": "Allow SSH for admin",
            "from_port": 22,
            "id": "sgrule-1277532254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfda7a5195c59fde",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.admin",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from ALB Security Group",
            "from_port": 80,
            "id": "sgrule-1746890553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0533822d5f110289f",
            "security_group_rule_id": "sgr-0da1693eaac3c3f60",
            "self": false,
            "source_security_group_id": "sg-08c97daef15fa03f1",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_access_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from ALB Security Group",
            "from_port": 443,
            "id": "sgrule-1629963661",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0533822d5f110289f",
            "security_group_rule_id": "sgr-0dfb7e31b8e5889fd",
            "self": false,
            "source_security_group_id": "sg-08c97daef15fa03f1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_access_ingress_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ICMP Test from ALB Security Group",
            "from_port": 1521,
            "id": "sgrule-2058765161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0533822d5f110289f",
            "security_group_rule_id": "sgr-0dcb04afd0fb3837f",
            "self": false,
            "source_security_group_id": "sg-08c97daef15fa03f1",
            "timeouts": null,
            "to_port": 1521,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP",
            "from_port": 80,
            "id": "sgrule-1932944366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c97daef15fa03f1",
            "security_group_rule_id": "sgr-0cf804c47c4162fb9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-1301938364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08c97daef15fa03f1",
            "security_group_rule_id": "sgr-07557f6a8a0163ff9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:subnet/subnet-0b56fb9d51fe29f11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.4.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b56fb9d51fe29f11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-private-subnet-2a-10.4.3.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-private-subnet-2a-10.4.3.0/24"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:subnet/subnet-0506ea4fd5389a162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.4.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0506ea4fd5389a162",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-private-subnet-2c-10.4.33.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-private-subnet-2c-10.4.33.0/24"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:subnet/subnet-0c4b47758413216fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.4.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4b47758413216fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-subnet-1a-10.4.2.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-subnet-1a-10.4.2.0/24"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:subnet/subnet-0d68ec20231e0110f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.4.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68ec20231e0110f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-subnet-1c-10.4.22.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-subnet-1c-10.4.22.0/24"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:subnet/subnet-0f5caed4d707fae0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5caed4d707fae0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-fw-subnet-1a-10.4.1.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-fw-subnet-1a-10.4.1.0/24"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:subnet/subnet-0a35a8bba3e46665f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.4.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a35a8bba3e46665f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "518897854809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-public-fw-subnet-1c-10.4.11.0/24"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-public-fw-subnet-1c-10.4.11.0/24"
            },
            "vpc_id": "vpc-0cca97fbdbc190704"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:vpc/vpc-0cca97fbdbc190704",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-00982f1ae4727fa3a",
            "default_route_table_id": "rtb-084bcdf35af3ffe4b",
            "default_security_group_id": "sg-06a0ca92c07e6efe8",
            "dhcp_options_id": "dopt-01b4f717acc54782a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cca97fbdbc190704",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084bcdf35af3ffe4b",
            "owner_id": "518897854809",
            "tags": {
              "Managed_by": "terraform",
              "Name": "region01-vpc",
              "team": "4jo"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "region01-vpc",
              "team": "4jo"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "icmp_access_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:518897854809:security-group-rule/sgr-0aeb3b610fe0adc2f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "ICMP Test",
            "from_port": -1,
            "id": "sgr-0aeb3b610fe0adc2f",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08c97daef15fa03f1",
            "security_group_rule_id": "sgr-0aeb3b610fe0adc2f",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}